[package]
name = "app"
version = "0.1.0-beta0.1"
description = "A Tauri App"
authors = ["Himanshu"]
license = "BSD-3-Clause"
repository = "https://github.com/Himasnhu-at/codehaven.org"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [
    "dialog-save",
    "dialog-message",
    "fs-write-file",
    "dialog-open",
] }
rayon = "1.7.0"
tokio = "1.29.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
